WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141461
fix windows debug build
https://bugs.webkit.org/show_bug.cgi?id=141461
Summary
fix windows debug build
Alex Christensen
Reported
2015-02-10 21:29:32 PST
Fixing Visual Studio crashes will never cease to be an adventure.
https://bugs.webkit.org/show_bug.cgi?id=141374
caused debug builds on Windows to fail because iterating descendantsOfType was too complicated for Visual Studio. Explicitly calling the iterator constructor fixes this problem.
Attachments
Patch
(1.53 KB, patch)
2015-02-10 21:34 PST
,
Alex Christensen
benjamin
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2015-02-10 21:34:47 PST
Created
attachment 246373
[details]
Patch
WebKit Commit Bot
Comment 2
2015-02-10 21:51:43 PST
Comment on
attachment 246373
[details]
Patch Rejecting
attachment 246373
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-01', 'apply-attachment', '--no-update', '--non-interactive', 246373, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: e: 1 cwd: /Volumes/Data/EWS/WebKit Parsed 2 diffs from patch file(s). patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/dom/TypedElementDescendantIterator.h Hunk #1 FAILED at 263. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebCore/dom/TypedElementDescendantIterator.h.rej Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Benjamin Poulain']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output:
http://webkit-queues.appspot.com/results/6357838435713024
Alex Christensen
Comment 3
2015-02-10 21:57:39 PST
http://trac.webkit.org/changeset/179916
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug