[Win] Fix debug build after r179807. https://bugs.webkit.org/show_bug.cgi?id=141461

Reviewed by Benjamin Poulain.

* dom/TypedElementDescendantIterator.h:
Explicitly call Iterator constructor to reduce complexity when iterating descendantsOfType.



Canonical link: https://commits.webkit.org/159495@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179916 268f45cc-cd09-0410-ab3c-d52691b4dbfc